--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ rust: stable
 os: linux
 cache: cargo
 
+before_install:
+  - sudo apt-get install libv4l-dev
+
 jobs:
   allow_failures:
     env:
@@ -14,9 +17,11 @@ jobs:
     - stage: build
       script:
         - cargo build --no-default-features
+        - cargo build --features v4l
     - stage: test
       script:
         - cargo test --no-default-features
+        - cargo test --features v4l
     - stage: fmt
       before_script:
         - rustup component add rustfmt
