--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
 edition = "2018"
 license = "MIT"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+default = ["v4l"]
 
 [dependencies]
+cfg-if = "0.1"
+ffimage = "^0.4"
+
+[target.'cfg(target_os = "linux")'.dependencies.v4l]
+version = "^0.5"
+optional = true
