--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "eye"
+description = "Cross platform camera capture and control"
 version = "0.1.0"
 authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
 edition = "2018"
 license = "MIT"
+readme = "README.md"
+repository= "https://github.com/raymanfx/eye-rs"
 
 [features]
 default = ["v4l"]
