hal: Implement transparent buffer conversion
Two new types are introduced to faciliate a common abstraction layer:

 * TransparentDevice: Wrap format accessors
 * TransparentStream: Wrap buffer accessors

Other functionality such as the controls API remains unchanged and calls are
routed transparently to the underlying abstraction layers.

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,14 @@ readme = "README.md"
 repository= "https://github.com/raymanfx/eye-rs"
 
 [features]
-default = ["v4l"]
+default = ["jpeg", "v4l"]
+jpeg = ["jpeg-decoder"]
 
 [dependencies]
 cfg-if = "0.1"
 ffimage = "^0.5"
+
+jpeg-decoder = { version = "^0.1", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies.v4l]
 version = "^0.7"
