--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ repository= "https://github.com/raymanfx/eye-rs"
 [features]
 default = ["jpeg", "v4l"]
 jpeg = ["jpeg-decoder"]
+openpnp = ["openpnp_capture"]
 
 [dependencies]
 bitflags = "^1.2"
 ffimage = "^0.8"
 
 jpeg-decoder = { version = "^0.1", optional = true }
+openpnp_capture = { version = "^0.1", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies.v4l]
 version = "^0.10"
