--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ readme = "README.md"
 repository= "https://github.com/raymanfx/eye-rs"
 
 [features]
-default = ["jpeg", "v4l"]
+default = ["jpeg"]
 jpeg = ["jpeg-decoder"]
-openpnp = ["openpnp_capture"]
+
+# capture backends
+hal-openpnp = ["openpnp_capture"]
 
 [dependencies]
 bitflags = "^1.2"
@@ -20,6 +22,5 @@ ffimage = "^0.8"
 jpeg-decoder = { version = "^0.1", optional = true }
 openpnp_capture = { version = "^0.1", optional = true }
 
-[target.'cfg(target_os = "linux")'.dependencies.v4l]
-version = "^0.10"
-optional = true
+[target.'cfg(target_os = "linux")'.dependencies]
+v4l = { version = "^0.10" }
