CI: Improve caching
The reasoning is given in [1].

Unfortunately, TravisCI is not clever at all about caching, causing builds to
slow down excessively due to caching gigabytes of useless data.

[1] Credits: https://levans.fr/rust_travis_cache.html

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,19 @@ language: rust
 rust: stable
 
 os: linux
-cache: cargo
 
 before_install:
   - sudo apt-get install libv4l-dev
+
+# Need to cache the whole `.cargo` directory to keep .crates.toml for
+# cargo-update to work
+cache:
+  directories:
+    - /home/travis/.cargo
+
+# But don't cache the cargo registry
+before_cache:
+  - rm -rf /home/travis/.cargo/registry
 
 jobs:
   allow_failures:
