--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ hal-openpnp = ["openpnp_capture"]
 
 [dependencies]
 bitflags = "^1.2"
-ffimage = "^0.8"
+ffimage = "0.8.1"
 
 jpeg-decoder = { version = "^0.1", optional = true }
 openpnp_capture = { version = "^0.1", optional = true }
