--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,15 @@ repository= "https://github.com/raymanfx/eye-rs"
 default = ["jpeg"]
 jpeg = ["jpeg-decoder"]
 
+# capture backends
+hal-uvc = ["uvc"]
+
 [dependencies]
 bitflags = "^1.2"
 ffimage = "0.8.2"
 
 jpeg-decoder = { version = "^0.1", optional = true }
+uvc = { version = "0.2", features = ["vendor"], optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 v4l = { version = "0.12" }
