--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,4 @@ ffimage = "0.8.2"
 jpeg-decoder = { version = "^0.1", optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-v4l = { version = "^0.10" }
+v4l = { version = "0.11" }
