--- a/eye/Cargo.toml
+++ b/eye/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "eye"
 description = "Cross platform camera capture and control"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -13,17 +13,10 @@ default = ["jpeg"]
 jpeg = ["jpeg-decoder"]
 
 # capture backends
-hal-uvc = ["uvc"]
+hal-uvc = ["eye-hal/plat-uvc"]
 
 [dependencies]
-bitflags = "^1.2"
+eye-hal = { version = "0.1.0", path = "../eye-hal" }
 ffimage = "0.9.0"
 
 jpeg-decoder = { version = "^0.1", optional = true }
-uvc = { version = "0.2", features = ["vendor"], optional = true }
-
-[target.'cfg(target_os = "linux")'.dependencies]
-v4l = { version = "0.12" }
-
-[dev-dependencies]
-itertools = "0.10.0"
