--- a/eye/Cargo.toml
+++ b/eye/Cargo.toml
@@ -19,4 +19,4 @@ hal-uvc = ["eye-hal/plat-uvc"]
 eye-hal = { version = "0.1.0", path = "../eye-hal" }
 ffimage = "0.9.0"
 
-jpeg-decoder = { version = "^0.1", optional = true }
+jpeg-decoder = { version = "0.2.1", optional = true }
