examples: Add glium example
Signed-off-by: raymanfx@gmail.com <raymanfx@gmail.com>

--- a/eye/Cargo.toml
+++ b/eye/Cargo.toml
@@ -21,3 +21,6 @@ ffimage = "0.9.0"
 ffimage_yuv = "0.9.0"
 
 jpeg-decoder = { version = "0.2.1", optional = true }
+
+[dev-dependencies]
+glium = "0.31.0"
