--- a/eye-hal/Cargo.toml
+++ b/eye-hal/Cargo.toml
@@ -19,7 +19,7 @@ uvc = { version = "0.2.0", features = ["vendor"], optional = true }
 v4l = { git = "https://github.com/raymanfx/libv4l-rs", rev = "d7ac71" }
 
 [target.'cfg(any(target_os="macos", target_os="windows"))'.dependencies]
-uvc = { version = "0.2.0", features = ["vendor"], optional = true }
+uvc = { version = "0.2.0", features = ["vendor"] }
 
 [dev-dependencies]
 itertools = "0.10.0"
