Revert "Remove openpnp-capture HAL"
libuvc does not seem to support the latest macOS iSight webcams.
I tested this on my MacBook Pro 14" with the M1 Pro chip.

To restore functionality on recent Apple hardware, we bring back
the openpnp-capture library as a dependency for macOS.

libuvc will be used on Windows only going forward. Since maintaining
two separate backends for Windows and macOS is a considerable effort,
I might decide to axe the libuvc support completely in the future.

This reverts commit fbbb8a7da6008939fa69a01381dde7d8f18c9356.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,9 +75,9 @@ jobs:
         override: true
         profile: minimal
     - name: Check
-      run: cargo check --no-default-features
+      run: cargo check
     - name: Check examples
-      run: cargo check --manifest-path=eye/Cargo.toml --no-default-features --examples
+      run: cargo check --manifest-path=eye/Cargo.toml --examples
 
   check-hals:
     name: check-hals
@@ -89,10 +89,10 @@ jobs:
           os: ubuntu-18.04
           rust: stable
           features: ""
-        - build: uvc-macos
+        - build: openpnp-macos
           os: macos-10.15
           rust: stable
-          features: "--features hal-uvc"
+          features: ""
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -103,4 +103,4 @@ jobs:
         profile: minimal
         override: true
     - name: Check
-      run: cargo check --manifest-path=eye/Cargo.toml --no-default-features ${{ matrix.features }}
+      run: cargo check --manifest-path=eye/Cargo.toml ${{ matrix.features }}
