--- a/eye-hal/Cargo.toml
+++ b/eye-hal/Cargo.toml
@@ -18,7 +18,8 @@ v4l = { git = "https://github.com/raymanfx/libv4l-rs", rev = "d7ac71" }
 uvc = { version = "0.2.0", features = ["vendor"] }
 
 [target.'cfg(target_os="macos")'.dependencies]
-openpnp_capture = { version = "0.2.0" }
+openpnp_capture = { version = "0.2.4" }
+openpnp_capture_sys = { version = "0.4.0" }
 
 [dev-dependencies]
 itertools = "0.10.0"
